lintian-brush (0.61) UNRELEASED; urgency=medium

  * Fix a bug incorrectly removing used license stanzas with license
    exceptions in debian/copyright.
  * Report when the upstream-metadata-missing-repository and upstream-
    metadata-missing-bug-tracking tags are fixed.
  * Add fixer for upstream-metadata-in-native-source.
  * Preserve @cdbs@ in debian/control.in in cdbs packages.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 04 Apr 2020 21:53:49 +0000

lintian-brush (0.60) unstable; urgency=medium

  * missing-build-dependency-for-dh_-command: Don't break on empty
    lines. Closes: #953392
  * Fix bug in detection of secure versions of Vcs-* URLs. Closes:
    #954034
  * Fix a corner case removing items from --with arguments.
  * In verbose mode, report when the fixer script made changes but they
    were not high enough certainty.
  * debian/watch: Strip leading spaces in version > 3.
  * Add gitlab.labs.nic.cz to list of GitLab hosting sites.
  * missing-build-dependency-for-dh_-command: Don't add unnecessary
    build deps.
  * List git.openstack.org as known hosting site.
  * Scan debian/rules for hints of upstream repository URL.
  * Support finding upstream KDE repositories.
  * Some improvements to creating of watch files from GitHub projects.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 04 Apr 2020 17:11:01 +0000

lintian-brush (0.59) unstable; urgency=medium

  * unused-license-paragraph-in-dep5-copyright: downgrade certainty when
    license is mentioned elsewhere.
  * Look for custom patches directory in debian/rules.
  * Document the --dry-run option in lintian-brush(1). Closes: #953161
  * lintian-brush.conf.5: Clarify syntax of compat-release, location of
    file. Closes: #953164

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 07 Mar 2020 14:31:37 +0000

lintian-brush (0.58) unstable; urgency=medium

  * Add override for autotools-pkg-config-macro-not-cross-compilation-
    safe, which correctly (but intentionally) gets triggered for our