@@ -1,3 +1,3 @@
 Source: lintrian-brush
-Standards-version: 4.5.0
+Standards-version: 4.4.1
 Build-Depends: debhelper-compat (= 11)
