@@ -1,0 +1,3 @@
+#!/bin/sh -e
+
+update-rc.d start test
