@@ -6,6 +6,7 @@ lintian-brush (0.61) UNRELEASED; urgency=medium
     metadata-missing-bug-tracking tags are fixed.
   * Add fixer for upstream-metadata-in-native-source.
   * Preserve @cdbs@ in debian/control.in in cdbs packages.
+  * Add support for updating to Standards-Version 4.5.0 in some cases.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 04 Apr 2020 21:53:49 +0000
 
